Fixed layout problem with section 106 process

--- a/modules/custom/section_106_process/sass/section_106_process.scss
+++ b/modules/custom/section_106_process/sass/section_106_process.scss
@@ -5,8 +5,8 @@
 
 @import "global";
 #block-section106processblock {
-  height: 377px;
-  width: 100%;
+  height: auto;;
+  width: 100%; 
 }
 
 .section_106_process {
