--- a/themes/achp/css/style.css
+++ b/themes/achp/css/style.css
@@ -1411,6 +1411,12 @@ header {
 ** This Sass file defines the styles for the 
 ** Section 106 Process module.
 */
+#homepage_flowchart_region {
+  padding: 25px 0px 0px 0px;
+  width: 100%;
+  height: auto;
+  background-color: #E8F8FF; }
+
 .flowchart_content_wrapper {
   margin: 0 auto;
   text-align: center; }
@@ -1422,7 +1428,7 @@ header {
   .header_container hr {
     width: 60%; }
 
-#homepage_issues_region {
+#homepage_flowchart_region {
   padding: 25px 0px 0px 0px; }
 
 #block-readmoreaboutthefederalpreservationprocess div {
@@ -1432,7 +1438,7 @@ header {
 
 /*
 ** This Sass file defines the styles for the 
-** Section 106 Process module.
+** Issues in Preservation module.
 */
 .issues_content_wrapper {
   margin: 0 auto;
