--- a/themes/achp/sass/features/_section_106_process.scss
+++ b/themes/achp/sass/features/_section_106_process.scss
@@ -3,6 +3,13 @@
 ** Section 106 Process module.
 */
 
+#homepage_flowchart_region {
+  padding: 25px 0px 0px 0px;
+  width: 100%;
+  height: auto;
+  background-color: $background-color-lightblue;
+}
+
 .flowchart_content_wrapper {
   margin: 0 auto;
   text-align: center;
@@ -17,7 +24,7 @@
   }
 }
 
-#homepage_issues_region {
+#homepage_flowchart_region {
   padding: 25px 0px 0px 0px;
 }
 
@@ -25,7 +32,7 @@
   div {
   	margin: 20px 20px 30px 20px;
     button {    
-    text-transform: uppercase;
+      text-transform: uppercase;
     }
   }
 }
